--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<span class="date">December 2021</span>
 										<h2>College Employment Mobile App</h2>
 									</header>
-									<a href="app.html" class="image fit"><img src="images/mobileApp.png" alt="" /></a>
+									<a href="app.html" class="image fit"><img src="images/MobileApp.png" alt="" /></a>
 									<p>The Campus Jobs mobile application streamlines the on-campus job search process for Conestoga College students, offering a user-friendly platform for job exploration, applications, and efficient coordination with department coordinators.</p>
 									<ul class="actions special">
 										<li><a href="app.html" class="button">Full Case Study</a></li>
@@ -128,7 +128,7 @@
 										<span class="date">May 2020</span>
 										<h2>MEAN Stack - Umang Application</h2>
 									</header>
-									<a href="umang.html" class="image fit"><img src="images/umang.png" alt="" /></a>
+									<a href="umang.html" class="image fit"><img src="images/Umang.png" alt="" /></a>
 									<p>
 										As a frontend developer at Unthinkable Solutions, I contributed to the Umang project, enhancing the user interface with Angular, HTML, CSS, and Bootstrap. A unified mobile app for New-age Governance in India, simplifies access to diverse e-Gov services.</p>
 									<ul class="actions special">
