--- a/app.html
+++ b/app.html
@@ -91,7 +91,7 @@
 									<header>
 										<span class="date">WELCOME PAGE</span>
 									</header>
-									<a href="#" class="image fit"><img src="images/WelcomePage.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/welcomePage.png" alt="" /></a>
 								</article>
 								<article>
 									<header>
@@ -109,19 +109,19 @@
 									<header>
 										<span class="date">JOB DESCRIPTION PAGE</span>
 									</header>
-									<a href="#" class="image fit"><img src="images/JobdescPage.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/JobDescPage.png" alt="" /></a>
 								</article>
                                 <article>
 									<header>
 										<span class="date">JOB APPLICATION PAGE</span>
 									</header>
-									<a href="#" class="image fit"><img src="images/JobappPage.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/JobAppPage.png" alt="" /></a>
 								</article>
                                 <article>
 									<header>
 										<span class="date">SUBMISSION PAGE</span>
 									</header>
-									<a href="#" class="image fit"><img src="images/submissionPage.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/SubmissionPage.png" alt="" /></a>
 								</article>
 							</section>
 					</div>
