--- a/experience.html
+++ b/experience.html
@@ -45,20 +45,32 @@
 					<div id="main">
                         <h2>Professional Experience</h2>
 				        <div class="box">
-                            <header>
-                                <h3>Career Launch Associate | <a href="https://rbc.com/">Royal Bank of Canada</a></h3>
-                                <p>Saskatoon, SK | March 2023 - Present</p>
+			     <header>
+                                <h3>Database Administrator | <a href="https://savemax.com/">SaveMax Real Estate Inc.</a></h3>
+                                <p>Winnipeg, MB | October 2024 - April 2025</p>
                             </header>
                             <ul>
-                                <li><b>RBC Data Centre of Expertise - BDMARS Data Analyst| (December 2023 - Present)</b></li>
-                                <li>Utilized Datameer, Tableau, and BI tools for critical thinking and creative problem-solving.</li>
-                                <li>Developed and implemented key dashboards, including the Incentive Measure and Monitoring Dashboard, EFS Incentive Dashboard.</li>
-                                <li><b>Royal University Hospital - Data Analyst | (September 2023 - November 2023)</b></li>
-                                <li>Led preparation of event charters, budget plans, and terms of reference using Critical Path Functionality.</li>
-                                <li>Optimized data management tools through digitalization, automation, and created PowerBI dashboards for robust data analysis.</li>
-                                <li><b>RBC Banking Operations | (March 2023 - August 2023)</b></li>
-                                <li>Managed integral banking operations, focusing on Mortgages and Automotive Funding.</li>
-                                <li>Proactively volunteered to streamline operations, clearing backlogged files and mitigating potential client impact.</li>
+                                <li>Designed and maintained relational databases using Microsoft SQL Server.</li>
+                                <li>Created stored procedures, triggers, and views for property listing and CRM platforms.</li>
+                                <li>Automated data backups, migrations, and monitored performance using SQL Profiler.</li>
+                                <li>Ensured data integrity, optimized query performance, and generated reports for analytics.</li>
+                                <li>Worked closely with internal teams to define database requirements and structure</li>
+                            </ul>  	
+                            <header>
+                                <h3>Software Developer | <a href="https://rbc.com/">Royal Bank of Canada</a></h3>
+                                <p>Toronto, ON | October 2022 - September 2024</p>
+                            </header>
+                            <ul>
+                                <li><b>Project 1: Secure Customer Profile System</b></li>
+                                <li>Developed and maintained responsive web interfaces using Angular and .NET Core.</li>
+                                <li>Built RESTful APIs for secure communication between front-end and back-end.</li>
+                                <li>Implemented Azure Active Directory for role-based authentication.</li>
+                                <li>Integrated SQL Server stored procedures for transaction and customer data access.</li>
+                                <li><b>Project 2: Data Visualization Dashboard for Fraud Analytics</b></li>
+                                <li>Created an interactive dashboard using Angular and Chart.js for fraud detection teams.</li>
+                                <li>Optimized queries for large datasets using indexes and stored procedures in SQL Server.</li>
+				<li>Worked closely with QA and PMs in Agile sprints to ship frequent updates.</li>
+                                <li>Participated in code reviews, retrospectives, and sprint planning.</li>
                             </ul>
                             <header>
                                 <h3>Software Developer | <a href="https://www.unthinkable.co/">Unthinkable Solutions</a></h3>
