--- a/skills.html
+++ b/skills.html
@@ -71,8 +71,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>813 Idylwyld Drive North<br />
-								Saskatoon, SK, CAN, S7L0Z5</p>
+								<p>14 Rockland Court<br />
+								Winnipeg, MB, CAN, R3Y 2K3</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
