--- a/experience.html
+++ b/experience.html
@@ -45,10 +45,20 @@
 					<div id="main">
                         <h2>Professional Experience</h2>
 				        <div class="box">
-			     	
+			     			<header>
+                                <h3>Technical Customer Support Advisor | <a href="https://www.intouchcx.com/">InTouch CX</a></h3>
+                                <p>Winnipeg, MB, Canada | August 2025 - Present</p>
+                            </header>
+                            <ul>
+                                <li>Handling inbound customer calls to provide technical assistance, troubleshooting, and issue resolution. </li>
+								<li>Actively listening to the customers and guiding them step by step to resolve technical or non-technical problems. </li>
+								<li>Met and exceeded key performance indicators (KPIs) such as average handling time (AHT), after call waiting time (ACW), and customer satisfaction scores (CSAT).</li>
+								<li>Documented detailed and accurate case notes in the system to ensure a smooth handover for future advisors and maintain service continuity.</li>
+                            </ul>  
+							
                             <header>
                                 <h3>Career Launch Associate | <a href="https://rbc.com/">Royal Bank of Canada</a></h3>
-                                <p>Toronto, ON | March 2023 - March 2024</p>
+                                <p>Toronto, ON, Canada | March 2023 - March 2024</p>
                             </header>
                             <ul>
                                 <li><b>Rotation 1: Associate – Canadian Banking Operations</b></li>
